--- a/06_dom/two.html
+++ b/06_dom/two.html
@@ -5,33 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM | Chai aur Code</title>
 </head>
-<body
-style="background-color: #212121; color: #fff;">
+<body>
     <div class="parent">
         <div class="day">Monday</div>
         <div class="day">Tuesday</div>
         <div class="day">Wednesday</div>
         <div class="day">Thursday</div>
     </div>
+
+    <script>
+        const parent = document.querySelector('.parent')
+        // console.log(parent)
+        // console.log(parent.children)
+        // console.log(parent.children[1].innerHTML)
+
+        for(let i = 0; i < parent.children.length; i++) {
+            // console.log(parent.children[i].innerHTML)
+        }
+
+        parent.children[1].style.color = "orange"
+        // console.log(parent.firstElementChild)
+        // console.log(parent.lastElementChild)
+
+        const dayOne = document.querySelector('.day')
+        // console.log(dayOne.innerHTML)
+        console.log(dayOne.parentElement)
+        console.log(dayOne.nextElementSibling.innerText)
+
+        console.log("NODES:", parent.childNodes)
+
+    </script>
+
 </body>
-<script>
-    const parent = document.querySelector('.parent')
-    // console.log(parent)
-    // console.log(parent.children)
-    // console.log(parent.children[1].innerHTML)
-
-    for(let i = 0; i < parent.children.length; i++) {
-        // console.log(parent.children[i].innerHTML)
-    }
-
-    parent.children[1].style.color = "orange"
-    // console.log(parent.firstElementChild);
-    // console.log(parent.lastElementChild);
-
-    const dayOne = document.querySelector('.day')
-    console.log(dayOne)
-    console.log(dayOne.parentElement)
-    console.log(dayOne.nextElementSibling)
-    
-</script>
 </html>
